[gd_scene load_steps=2 format=3 uid="uid://c1uvxbfpjhfyd"]

[ext_resource type="Script" path="res://Scenes/Stuff/BounceTest/BounceTest.gd" id="1_3sdw6"]

[node name="BounceTest" type="Area2D"]
script = ExtResource("1_3sdw6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
